Initialise format ctx to NULL, how did this ever work

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+o Having to pass the full path to the clips folder including trailing / as argv is stupid
 o Scrolling on edges is broken under WindowMaker because of the window border... bodged it by moving the window left and up a pixel
 o Whiteness on the grid when you stop sampling
 o You have to pass the path to the clips folder as argv[1] with a trailing /
